	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12016 Speed Increasing Potion: A potion which increases the moving speed of a character for a duration.
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================

03/10
	* Updated div of LoV, Combo Skills and other such skills whose damage
	  equation does not really scales well with the number of hits. [Skotlex]
	* Made G_Giant_Hornet Agressive, thanks to Blackgatomon [Lupus]
	* Doppel's drops fix Lance 1411 -> Lance 1410 [Lupus]
03/08
	* Updated skill tree for Ninja/GS [Vicious]
	* More work on Ninja/GS. They have joblvl 70, according to status
	  on kRO site, so using adv. classes' job exp chart. [Vicious]
	* Updated stat bonus, given by Muad_Dib.  [Vicious]
	* Added more columns to size_fix and job_db1.txt with temp value. [Vicious]
	* Fixed cooldown time for ASC_CDP, according to description [Foruken]
03/07
	* Temp ninja/gs skill tree. [Vicious]
	* Temp plug on Ninja in Skill_db. Ninja is correct on skill ID,
	  not sure about gunslinger, so they're commented out. [Vicious]
03/06
	* Stave Crasher's element is now -1 (take weapon's element) [Skotlex]
03/03
	* Fixed missing baby-dancer job in exp2.txt [Skotlex]
	* Added GrandCross's can't move delay of 900ms to skill_cast_db and Finger
	  Offensive's can't move delay of 200ms/lv to skill_cast_db (values taken
	  from the code) [Skotlex]
	* Updated skill_cast_db time info for some skills: [Skotlex]
	- Magnum's time2 is skill-block time
	- St. Recovery/ Cure's time2 is the confuse/blind duration
	- added NPC_POWERUP/NPC_AGIUP durations
	- Napalm Vulcan's time2 is curse length
	- Most of Tarot Card's effects last time2
	* Adjusted SC durations for Meteor Assault [Skotlex]
03/02
	* Temp Plugs for NJ and GS items [Poki#3]
	* Fixed some skill warnings. [Poki#3]
	* Added back mob "Mime Monkey". [Poki#3]

03/01