@@ -825,14 +825,13 @@
 //-- GS_MAGICALBULLET
 507,0,0,0,0,0
 //-- GS_CRACKER
-508,0,0,0,0,0
+508,0,0,0,0,5000
 //-- GS_TRACKING
-
 512,1200:1400:1600:1800:2000:2200:2400:2600:2800:3000,0,0,0,0
 //-- GS_DISARM
 513,0,0,0,0,0
 //-- GS_PIERCINGSHOT
-514,0,0,0,0,0
+514,0,0,0,0,60000
 //-- GS_RAPIDSHOWER
 515,0,0,0,0,0
 //-- GS_DESPERADO
@@ -883,7 +882,7 @@
 //-- NJ_SUITON
 538,0,0,0,15000:20000:25000:30000:35000:40000:45000:50000:55000:60000,0
 //-- NJ_HYOUSYOURAKU
-539,0,0,0,0,0
+539,0,0,0,0,10000
 //-- NJ_HUUJIN
 540,0,0,0,0,0
 //-- NJ_RAIGEKISAI
